--- a/index.html
+++ b/index.html
@@ -6,8 +6,32 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Mikhail Chernyshov</title>
     <link rel="stylesheet" href="./css/style.css">
+    
+    <link rel="apple-touch-icon" sizes="180x180" href="./favicon/apple-touch-icon.png">
+    <link rel="icon" type="image/png" sizes="32x32" href="./favicon/favicon-32x32.png">
+    <link rel="icon" type="image/png" sizes="16x16" href="./favicon/favicon-16x16.png">
+    <link rel="manifest" href="./favicon/site.webmanifest">
+    <link rel="mask-icon" href="./favicon/safari-pinned-tab.svg" color="#5bbad5">
+    <meta name="msapplication-TileColor" content="#da532c">
+    <meta name="theme-color" content="#ffffff">
 </head>
 <body>
-    
+    <header>
+        <!-- Нав бар -->
+        <!-- Ссылки в нав баре на страницу -->
+    </header>
+    <main>
+        <section id="welcome-section">
+            <h1>Welcome tet</h1>
+        </section>
+
+        <section id="projects">
+            <section class="project-tile">
+                <!-- Название проектов и может карты проектов -->
+                <!-- Ссылки -->
+            </section>
+        </section>
+    </main>
+    <footer></footer>
 </body>
 </html>
