--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
             <ul class="header__navbar-flex-ul">
                 <li><a href="#" class="header__navbar-link">Home</a></li>
                 <li><a href="#" class="header__navbar-link">About Me</a></li>
-                <li><a href="#" class="header__navbar-link">Skills</a></li>
+                <li><a href="#" class="header__navbar-link">Projects</a></li>
                 <li><a href="#" class="header__navbar-link">Contact Me</a></li>
             </ul>
 
