Renamed, edited sections, dry

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Mikhail Chernyshov</title>
+    <title>Chernyshov Mikhail</title>
     <link rel="stylesheet" href="./css/style.css">
     
     <link rel="apple-touch-icon" sizes="180x180" href="./images/favicon/apple-touch-icon.png">
@@ -20,7 +20,7 @@
     <header>
         <nav class="header__navbar">
 
-            <p class="logo">Mikhail Chernyshov</p>
+            <p class="logo">Chernyshov Mikhail</p>
 
             <ul class="header__navbar-flex-ul">
                 <li><a href="#" class="header__navbar-link">Home</a></li>
@@ -42,8 +42,13 @@
     </header>
 
     <main>
-        <section id="welcome-section">
-            <h1>Welcome text</h1>
+        <section class="welcome-section">
+            <span>Hello 👋 I'm</span>
+            <span>Chernyshov Mikhail</span>
+        </section>
+
+        <section id="about-me">
+
         </section>
 
         <section id="projects">
@@ -51,6 +56,10 @@
                 <!-- Название проектов и может карты проектов -->
                 <!-- Ссылки -->
             </section>
+        </section>
+
+        <section id="contact-me">
+
         </section>
     </main>
 
