--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Chernyshov Mikhail</title>
-    <link rel="stylesheet" href="./css/style.css">
+    <link rel="stylesheet" href="./sass/components/index.css">
     
     <link rel="apple-touch-icon" sizes="180x180" href="./images/favicon/apple-touch-icon.png">
     <link rel="icon" type="image/png" sizes="32x32" href="./images/favicon/favicon-32x32.png">
@@ -20,6 +20,7 @@
     <header>
         <nav class="header__navbar">
 
+            <!-- <img src="./images/1.png" alt="Logo" class="logo-img"> -->
             <p class="logo">Chernyshov Mikhail</p>
 
             <ul class="header__navbar-flex-ul">
@@ -48,6 +49,16 @@
         </section>
 
         <section id="about-me">
+            <h1>Lorem ipsum dolor sit amet consectetur adipisicing elit. Adipisci quibusdam repellat dolorem recusandae eos ex, similique tempore, facilis deleniti quis neque harum unde. Cupiditate laboriosam est culpa? Saepe, unde tenetur!
+            Dolorum ex nostrum nam odio dolore adipisci nesciunt enim eius repellendus tempore doloremque, recusandae quod non quis quam, reiciendis sunt ad eos nobis asperiores, nemo esse voluptas quidem? Corporis, commodi.
+            Temporibus tempore dolore eos amet quisquam perferendis repellat nihil quia minima vitae, odio ipsum unde in eligendi? Omnis esse quo eius ad necessitatibus maxime provident rem, corporis vel doloremque accusantium.
+            Dolorem id, in itaque eos, perspiciatis aperiam aliquid minus praesentium eaque nisi exercitationem molestias accusamus? Dolorum veniam laboriosam, rerum similique saepe cumque eius animi. Adipisci, vitae. Perferendis eaque esse minus.
+            Ad quas eum magni omnis unde in officia, corporis vel voluptatum porro ratione veritatis eius harum velit quaerat non totam voluptatem esse ipsum ab officiis! Reprehenderit totam aperiam dolore architecto.
+            Tenetur sit et dicta repudiandae veritatis vitae labore exercitationem recusandae saepe debitis? Quia deleniti, laboriosam eius commodi et at asperiores saepe fuga blanditiis quo laudantium soluta fugiat explicabo eveniet in!
+            Asperiores numquam, nulla quaerat repellat veritatis iusto enim, quos, doloribus ut dolor voluptas eius doloremque. Voluptatibus quis ab sunt, quidem vitae quas qui sequi repellat nesciunt, odio fuga beatae eveniet.
+            Iste debitis aspernatur dolor in rerum, iusto asperiores quod excepturi ex, dolorum voluptatibus molestias delectus impedit similique illo laboriosam fugiat magnam quos doloremque? Autem pariatur voluptatem blanditiis necessitatibus tenetur accusantium.
+            Necessitatibus inventore explicabo cumque nemo quasi iste sequi impedit eligendi, quam autem aliquid modi accusamus ex blanditiis fugiat iure facilis architecto fuga animi. Corporis quam impedit delectus laborum temporibus est.
+            Doloribus autem omnis possimus quibusdam assumenda, ipsam eum nostrum architecto voluptate explicabo qui voluptatem iste accusantium consequuntur ipsum. Beatae quo ducimus dolores fuga quis ratione atque nostrum eveniet, iusto laboriosam?</h1>
         </section>
 
         <section id="projects">
