Added about-me section and edited for responsability

--- a/index.html
+++ b/index.html
@@ -19,13 +19,12 @@
 
     <header>
         <nav class="header__navbar">
-
-            <!-- <img src="./images/1.png" alt="Logo" class="logo-img"> -->
+            
             <p class="logo">Chernyshov Mikhail</p>
 
             <ul class="header__navbar-flex-ul">
                 <li><a href="#" class="header__navbar-link">Home</a></li>
-                <li><a href="#" class="header__navbar-link">About Me</a></li>
+                <li><a href="#about" class="header__navbar-link">About Me</a></li>
                 <li><a href="#" class="header__navbar-link">Projects</a></li>
                 <li><a href="#" class="header__navbar-link">Contact Me</a></li>
             </ul>
@@ -44,21 +43,18 @@
 
     <main>
         <section class="welcome-section">
-            <span>Hello 👋 I'm</span>
-            <span>Chernyshov Mikhail</span>
+            <span>Hello 👋</span>
+            <span>To Everyone</span>
         </section>
 
-        <section id="about-me">
-            <h1>Lorem ipsum dolor sit amet consectetur adipisicing elit. Adipisci quibusdam repellat dolorem recusandae eos ex, similique tempore, facilis deleniti quis neque harum unde. Cupiditate laboriosam est culpa? Saepe, unde tenetur!
-            Dolorum ex nostrum nam odio dolore adipisci nesciunt enim eius repellendus tempore doloremque, recusandae quod non quis quam, reiciendis sunt ad eos nobis asperiores, nemo esse voluptas quidem? Corporis, commodi.
-            Temporibus tempore dolore eos amet quisquam perferendis repellat nihil quia minima vitae, odio ipsum unde in eligendi? Omnis esse quo eius ad necessitatibus maxime provident rem, corporis vel doloremque accusantium.
-            Dolorem id, in itaque eos, perspiciatis aperiam aliquid minus praesentium eaque nisi exercitationem molestias accusamus? Dolorum veniam laboriosam, rerum similique saepe cumque eius animi. Adipisci, vitae. Perferendis eaque esse minus.
-            Ad quas eum magni omnis unde in officia, corporis vel voluptatum porro ratione veritatis eius harum velit quaerat non totam voluptatem esse ipsum ab officiis! Reprehenderit totam aperiam dolore architecto.
-            Tenetur sit et dicta repudiandae veritatis vitae labore exercitationem recusandae saepe debitis? Quia deleniti, laboriosam eius commodi et at asperiores saepe fuga blanditiis quo laudantium soluta fugiat explicabo eveniet in!
-            Asperiores numquam, nulla quaerat repellat veritatis iusto enim, quos, doloribus ut dolor voluptas eius doloremque. Voluptatibus quis ab sunt, quidem vitae quas qui sequi repellat nesciunt, odio fuga beatae eveniet.
-            Iste debitis aspernatur dolor in rerum, iusto asperiores quod excepturi ex, dolorum voluptatibus molestias delectus impedit similique illo laboriosam fugiat magnam quos doloremque? Autem pariatur voluptatem blanditiis necessitatibus tenetur accusantium.
-            Necessitatibus inventore explicabo cumque nemo quasi iste sequi impedit eligendi, quam autem aliquid modi accusamus ex blanditiis fugiat iure facilis architecto fuga animi. Corporis quam impedit delectus laborum temporibus est.
-            Doloribus autem omnis possimus quibusdam assumenda, ipsam eum nostrum architecto voluptate explicabo qui voluptatem iste accusantium consequuntur ipsum. Beatae quo ducimus dolores fuga quis ratione atque nostrum eveniet, iusto laboriosam?</h1>
+        <section id="about" class="about-me">
+            <article class="personal-info">
+                <img src="./images/michael.png" alt="mikhail's photo" class="pers-img">
+                <div class="description">
+                    <p>My name is Chernyshov Mikhail. I'm a self-learning web developer.</p>
+                    <p>One day I wish to find a job as a frontend developer</p>
+                </div>
+            </article>
         </section>
 
         <section id="projects">
