Added images with section projects

--- a/index.html
+++ b/index.html
@@ -57,11 +57,30 @@
             </article>
         </section>
 
-        <section id="projects">
-            <section class="project-tile">
+        <section id="projects" class="projects-section">
                 <!-- Название проектов и может карты проектов -->
-                <!-- Ссылки -->
-            </section>
+                    <div class="card">
+                        <a class="card-v2 card-v2--blur-fx cy7-radius-md" href="https://michaelchernyshov.github.io/survey-form/" target="_blank">
+                            <figure>
+                              <img src="./images/Screenshot 2023-01-25 at 10.49.40.png" alt="Survey Form">
+                              <figcaption class="card-v2__caption cy7-padding-sm cy7-text-center">
+                                <div class="cy7-text-md cy7-text-base@md">Survey Form</div>
+                              </figcaption>
+                            </figure>
+                          </a>
+                    </div>
+
+                    <div class="card">
+                        <a class="card-v2 card-v2--blur-fx cy7-radius-md" href="https://michaelchernyshov.github.io/tribute-page/" target="_blank">
+                            <figure>
+                              <img src="./images/Screenshot 2023-01-25 at 10.50.16.png" alt="Survey Form">
+                              <figcaption class="card-v2__caption cy7-padding-sm cy7-text-center">
+                                <div class="cy7-text-md cy7-text-base@md">Tribute Page</div>
+                              </figcaption>
+                            </figure>
+                          </a>
+                    </div>
+            
         </section>
 
         <section id="contact-me">
