Added titles, aligns, and buttons can jump to sections.

--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
             <ul class="header__navbar-flex-ul">
                 <li><a href="#" class="header__navbar-link">Home</a></li>
                 <li><a href="#about" class="header__navbar-link">About Me</a></li>
-                <li><a href="#" class="header__navbar-link">Projects</a></li>
+                <li><a href="#projects" class="header__navbar-link">Projects</a></li>
                 <li><a href="#" class="header__navbar-link">Contact Me</a></li>
             </ul>
 
@@ -48,6 +48,7 @@
         </section>
 
         <section id="about" class="about-me">
+            <h1 class="titles padding-title">Who am I?</h1>
             <article class="personal-info">
                 <img src="./images/michael.png" alt="mikhail's photo" class="pers-img">
                 <div class="description">
@@ -57,7 +58,8 @@
             </article>
         </section>
 
-        <section id="projects" class="projects-section">
+        <h1 id="projects" class="titles">My personal projects</h1>
+        <section class="projects-section">
                 <!-- Название проектов и может карты проектов -->
                     <div class="card">
                         <a class="card-v2 card-v2--blur-fx cy7-radius-md" href="https://michaelchernyshov.github.io/survey-form/" target="_blank">
