Deleted cooments and button to contact

--- a/index.html
+++ b/index.html
@@ -26,7 +26,6 @@
                 <li><a href="#" class="header__navbar-link">Home</a></li>
                 <li><a href="#about" class="header__navbar-link">About Me</a></li>
                 <li><a href="#projects" class="header__navbar-link">Projects</a></li>
-                <li><a href="#" class="header__navbar-link">Contact Me</a></li>
             </ul>
 
             <div class="social-link">
@@ -60,7 +59,6 @@
 
         <h1 id="projects" class="titles">My personal projects</h1>
         <section class="projects-section">
-                <!-- Название проектов и может карты проектов -->
                     <div class="card">
                         <a class="card-v2 card-v2--blur-fx cy7-radius-md" href="https://michaelchernyshov.github.io/survey-form/" target="_blank">
                             <figure>
@@ -84,14 +82,10 @@
                     </div>
             
         </section>
-
-        <section id="contact-me">
-
-        </section>
     </main>
 
     <footer>
-
+        <!-- Добавить футер -->
     </footer>
 </body>
 </html>
